# rust-mcts

./: .gitignore  Cargo.toml  LICENSE  NOTES  README.md  aliases.js  alphazerol.py  index.html  muzerol.py  networks.py  replay_buffer.py  requirements.txt  search-index.js  settings.html  settings.py  source-files.js  training.py  zerol.py
config/: breakout.toml  breakthrough.toml
evaluate/: all.html  fn.game_match.html  fn.main.html  fn.next.html  fn.run.html  index.html  sidebar-items.js  type.Result.html
generate/: all.html  fn.main.html  fn.run.html  fn.run_generator.html  index.html  sidebar-items.js  type.Result.html
ggpf/: Cargo.toml  all.html  index.html  sidebar-items.js
ggpf/deep/: index.html  sidebar-items.js
ggpf/deep/evaluator/: fn.dynamics.html  fn.dynamics_evaluator_single.html  fn.dynamics_task.html  fn.prediction.html  fn.prediction_evaluator_single.html  fn.prediction_task.html  fn.representation.html  fn.representation_evaluator_single.html  fn.representation_task.html  index.html  sidebar-items.js  type.DynamicsEvaluatorChannel.html  type.PredictionEvaluatorChannel.html  type.RepresentationEvaluatorChannel.html
ggpf/deep/file_manager/: fn.watch_model.html  index.html  sidebar-items.js  struct.FileManager.html
ggpf/deep/self_play/: fn.alphazero_game_generator.html  fn.muzero_game_generator.html  index.html  sidebar-items.js  struct.GameHistoryEntry.html
ggpf/deep/tf/: fn.call_dynamics.html  fn.call_prediction.html  fn.call_representation.html  fn.load_model.html  fn.support_to_value.html  index.html  sidebar-items.js  type.ThreadSafeModel.html
ggpf/game/: fn.simulate.html  index.html  sidebar-items.js  struct.NoFeatures.html  trait.Base.html  trait.Features.html  trait.Game.html  trait.GameBuilder.html  trait.GameView.html  trait.MoveCode.html  trait.Playable.html  trait.Playout.html  trait.SingleWinner.html  trait.Singleplayer.html  trait.SingleplayerGameBuilder.html  traitalias.MoveTrait.html
ggpf/game/breakthrough/: enum.Cell.html  enum.Color.html  enum.MoveDirection.html  index.html  sidebar-items.js  struct.Breakthrough.html  struct.BreakthroughBuilder.html  struct.Move.html
ggpf/game/breakthrough/ui/: index.html  sidebar-items.js  struct.IBreakthrough.html
ggpf/game/hashcode_20/: enum.Move.html  index.html  sidebar-items.js  struct.Hashcode20.html  struct.Hashcode20Settings.html
ggpf/game/meta/: index.html  sidebar-items.js
ggpf/game/meta/simulated/: index.html  sidebar-items.js  struct.DynamicsNetworkOutput.html  struct.Simulated.html
ggpf/game/meta/with_history/: index.html  sidebar-items.js  struct.IWithHistory.html  struct.WithHistory.html  struct.WithHistoryGB.html
ggpf/game/misere_breakthrough/: index.html  sidebar-items.js  struct.MisereBreakthrough.html
ggpf/game/openai/: index.html  sidebar-items.js  struct.Gym.html  struct.GymBuilder.html
ggpf/game/weak_schur/: index.html  sidebar-items.js  struct.WeakSchurNumber.html  struct.WeakSchurNumberBuilder.html
ggpf/policies/: fn.get_multi.html  index.html  sidebar-items.js  trait.DynMultiplayerPolicyBuilder.html  trait.MultiplayerPolicy.html  trait.MultiplayerPolicyBuilder.html  trait.SingleplayerPolicy.html  trait.SingleplayerPolicyBuilder.html
ggpf/policies/flat/: index.html  sidebar-items.js  struct.FlatMonteCarloPolicy.html  struct.FlatUCBMonteCarloPolicy.html  struct.Random.html  struct.RandomPolicy.html
ggpf/policies/mcts/: index.html  sidebar-items.js  struct.MCTSNode.html  struct.MCTSTreeNode.html  struct.WithMCTSPolicy.html  trait.BaseMCTSPolicy.html  traitalias.MCTSGame.html  type.MCTSNodeChild.html  type.MCTSNodeParent.html
ggpf/policies/mcts/muz/: index.html  sidebar-items.js  struct.MuZeroConfig.html  struct.Muz.html  struct.MuzEvaluatorChannels.html  struct.MuzEvaluators.html  struct.MuzPolicy.html
ggpf/policies/mcts/puct/: index.html  sidebar-items.js  struct.AlphaZeroConfig.html  struct.AlphaZeroEvaluators.html  struct.PUCT.html  struct.PUCTMoveInfo.html  struct.PUCTNodeInfo.html  struct.PUCTPolicy_.html  traitalias.Evaluator.html  type.PUCTPolicy.html
ggpf/policies/mcts/rave/: index.html  sidebar-items.js  struct.RAVEMoveInfo.html  struct.RAVENodeInfo.html  struct.RAVEPolicy_.html  type.RAVEPolicy.html
ggpf/policies/mcts/uct/: index.html  sidebar-items.js  struct.UCTMoveInfo.html  struct.UCTNodeInfo.html  struct.UCTPolicy_.html  type.UCTPolicy.html
ggpf/policies/nmcs/: index.html  sidebar-items.js  struct.MultiNMCS.html  struct.MultiNMCSPolicy.html  struct.NMCS.html  struct.NMCSPolicy.html
ggpf/policies/nrpa/: index.html  sidebar-items.js  struct.NRPA.html  struct.NRPAPolicy.html
ggpf/policies/ppa/: index.html  sidebar-items.js  struct.PPA.html  struct.PPAPolicy.html
ggpf/settings/: enum.Game.html  enum.Method.html  index.html  sidebar-items.js  struct.AlphaZero.html  struct.Config.html  struct.FlatMonteCarlo.html  struct.FlatUCBMonteCarlo.html  struct.MCTS.html  struct.MuZero.html  struct.PPA.html  struct.PUCT.html  struct.Policies.html  struct.RAVE.html  struct.SelfPlay.html  struct.StrError.html  struct.UCT.html
ggpf/src/: lib.rs
ggpf/src/deep/: evaluator.rs  file_manager.rs  mod.rs  self_play.rs  tf.rs
ggpf/src/game/: hashcode_20.rs  misere_breakthrough.rs  mod.rs  weak_schur.rs
ggpf/src/game/breakthrough/: mod.rs  ui.rs
ggpf/src/game/meta/: mod.rs  simulated.rs  with_history.rs
ggpf/src/game/openai/: mod.rs
ggpf/src/policies/: flat.rs  mod.rs  nmcs.rs  nrpa.rs  ppa.rs
ggpf/src/policies/mcts/: mod.rs  rave.rs  uct.rs
ggpf/src/policies/mcts/muz/: mod.rs
ggpf/src/policies/mcts/puct/: mod.rs
ggpf/src/settings/: mod.rs
ggpf_gym/: all.html  enum.GymRunnerRequest.html  enum.GymRunnerResponse.html  enum.GymRunnerResponseFut.html  index.html  sidebar-items.js  struct.BinCodec.html  struct.GymRunnerClient.html  (+2 more)
gym/: Cargo.toml
gym/src/: gym.rs  lib.rs
perf/: all.html  (+9 more)
tools/: Cargo.toml
(+199 files in other folders)
