[package]
name = "zerol"
version = "0.1.0"
authors = ["Lucas Pluvinage <lucas.pluvinage@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[lib]
name = "zerol"
path = "src/lib/lib.rs"

[dependencies]
rand_distr = "0.2.2"
tokio = { version = "0.2", features = ["full"] }
async-trait = "0.1.24"
clap = "2.33.0"
serde = "1.0"
serde-pickle = "0.6"
nix = "0.17.0"
rand = "0.7.3"
ansi_term = "0.12"
indicatif = "0.13"
rayon = "1.3.0"
unwrap = "1.2.1"
cursive = "0.14"
atomic-counter = "1.0.1"
crossbeam-channel = "0.4.0"
notify = "5.0.0-pre.2"
ndarray = "0.13.0"
float-ord = "0.2.0"

# for gym
#cpython = "0.4.1"
#failure = "0.1.6"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
debug = true

[dependencies.pyo3]
version = "0.8.5"
features = ["extension-module"]

[dependencies.numpy]
version = "0.7.0"

[dependencies.tensorflow]
version = "0.14.0"
features = ["tensorflow_gpu"]

#[replace]
#'tensorflow:0.14.0' = { path = '/home/lucas/git/tensorflow-rust' }
