[workspace]

members = [
    "ggpf",
    "tools",
    "gym",
]


[profile.dev]
opt-level = 0
debug = true

[profile.release]
debug = true

[patch.crates-io]
ndarray = { git = 'https://github.com/TheLortex/ndarray', branch = 'remove-axis-on-larger-dim'}
tensorflow = { git = 'https://github.com/Darktrop/rust/', branch = 'fixdownload' }