[package]
name = "ggpf"
version = "0.0.1"
authors = ["Lucas Pluvinage <lucas.pluvinage@gmail.com>"]
edition = "2018"

[lib]
name = "ggpf"

[dependencies]
ggpf-gym = { version = "0.0.1", path = "../gym" }

log = "0.4"
rand_distr = "0.2.2"
serde = "1.0"
serde-pickle = "0.6"
serde_derive = "1.0.106"
nix = "0.17.0"
rand = "0.7.3"
ansi_term = "0.12"
indicatif = "0.13"
cursive = "0.14"
atomic-counter = "1.0.1"
notify = "4.0.15"
ndarray = { version = "0.13.0", features = ["serde"]}
float-ord = "0.2.0"
async-trait = "0.1.27"
futures = "0.3.4"
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "net", "time", "macros", "sync"] }
tarpc = { version = "0.20.0", features = ["serde1", "tcp", "serde-transport", "tokio1"] }
tokio-serde = { version = "0.6", features = ["json"] }

[dependencies.tensorflow]
version = "0.15.0"
features = ["tensorflow_gpu"]
