[package]
name = "ggpf-gym"
version = "0.0.1"
authors = ["Lucas Pluvinage <lucas.pluvinage@gmail.com>"]
edition = "2018"

[lib]
name = "ggpf_gym"

[dependencies]
log = "0.4"
serde = "1.0"
ndarray = { version = "0.13.0", features = ["serde"]}
tarpc = { version = "0.20.0", features = ["serde1", "tcp", "serde-transport", "tokio1"] }
tokio-serde = { version = "0.6", features = ["json"] }
failure = "0.1.6"
pyo3 = "0.9.1"
rand = "0.7.3"
bincode = "1.2.1"
bytes = "0.5.4"
