[package]
name = "ggpf-tools"
version = "0.0.1"
authors = ["Lucas Pluvinage <lucas.pluvinage@gmail.com>"]
edition = "2018"


[dependencies]
ggpf = { version = "0.0.1", path = "../ggpf" }
ggpf-gym = { version = "0.0.1", path = "../gym" }
assert-impl = "0.1.3"
gstuff = "0.6.2"
cursive_tree_view = "0.6"
flexi_logger = "0.14.3"
cursive-flexi-logger-view = "^0"
log = "0.4"
rand_distr = "0.2.2"
clap = "2.33.0"
serde = "1.0"
serde-pickle = "0.6"
nix = "0.17.0"
rand = "0.7.3"
ansi_term = "0.12"
indicatif = "0.13"
rayon = "1.3.0"
cursive = "0.14"
atomic-counter = "1.0.1"
notify = "4.0.15"
ndarray = { version = "0.13.0", features = ["serde"]}
float-ord = "0.2.0"
typenum = "1.11.2"
arrayvec = "0.5.1"
async-trait = "0.1.27"
futures = "0.3.4"
tokio = { version = "0.2", features = ["full"] }
crossbeam-channel = "0.4"
sloth = "0.2.0"
tarpc = { version = "0.20.0", features = ["serde1", "tcp", "serde-transport", "tokio1"] }
tokio-serde = { version = "0.6", features = ["json"] }
failure = "0.1.6"