[package]
name = "ggpf-tools"
version = "0.0.1"
authors = ["Lucas Pluvinage <lucas.pluvinage@gmail.com>"]
edition = "2018"

[[bin]]
name = "gym_server"
doc  = false

[dependencies]
ggpf = { version = "0.0.1", path = "../ggpf" }
ggpf-gym = { version = "0.0.1", path = "../gym" }

cursive_tree_view = "0.6"
flexi_logger = "0.14.3"
cursive-flexi-logger-view = "^0"
log = "0.4"
clap = "2.33.0"
rand = "0.7.3"
indicatif = "0.13"
cursive = "0.14"
atomic-counter = "1.0.1"
ndarray = { version = "0.13.0", features = ["serde"]}
tokio = { version = "0.2", features = ["rt-core", "rt-threaded", "sync", "stream", "macros", "time"] }
crossbeam-channel = "0.4"
sloth = "0.2.0"
tarpc = { version = "0.20.0", features = ["serde1", "tcp", "serde-transport", "tokio1"] }
toml = "0.5.6"